# logic_tasks_Cpp

patterns/singleton/: singleton.cpp
task_1/: CMakeLists.txt  IntVectorManager.cpp  IntVectorManager.h  main.cpp  task.txt
task_2/: CMakeLists.txt  IntVectorManager.cpp  IntVectorManager.h  task.txt
task_3/: IntVectorManager.cpp  IntVectorManager.h  main.cpp
task_3_min_max_avg/: CMakeLists.txt  IntVectorManager.cpp  IntVectorManager.h  main.cpp
task_4_freq_analayzer_plus_class_temp/: CMakeLists.txt  main.cpp
task_4_freq_analayzer_plus_class_temp/headders/: DataAnalayzer.h  DataAnalyzer.h  StringAnalayzer.h  StringAnalyzer.h  VectorAnalayzer.h  VectorAnalyzer.h
task_4_freq_analayzer_plus_class_temp/src/: StringAnalyzer.cpp  VectorAnalayzer.cpp  VectorAnalyzer.cpp
task_5_LRU_cache/: CMakeLists.txt  LRUclass.cpp  LRUclass.h  main.cpp  task.txt
task_6_data_sort_strategy/: CMakeLists.txt  main.cpp
task_6_data_sort_strategy/headers/: class_abs_sort.h  class_def_sort.h  class_number_processor.h  class_rev_sort.h  class_temp.h
task_6_data_sort_strategy/src/: class_abs_sort.cpp  class_def_sort.cpp  class_number_processor.cpp  class_rev_sort.cpp
task_7_stud_manager/: CMakeLists.txt  main.cpp
task_7_stud_manager/include/: StudManager.h  Student.h
task_7_stud_manager/src/: StudManager.cpp  Student.cpp
task_8_stack/: CMakeLists.txt  Stack.cpp  Stack.h  build.sh  main.cpp
